Fix module title spacing issue

--- a/app/assets/stylesheets/partials/_base.scss
+++ b/app/assets/stylesheets/partials/_base.scss
@@ -73,6 +73,10 @@ body {
     margin-right: 2 * gutter();
     margin-bottom: 2 * gutter();
   }
+
+  main {
+    margin-top: gutter();
+  }
 }
 
 h1 { 
